force-app/main/default/objects/Opportunity/fields/Requires_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Requires_PO_Number__c</fullName>
    <description>If account requires a purchase order</description>
    <formula>Account.Requires_PO_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires PO Number</label>
    <type>Checkbox</type>
</CustomField>