force-app/main/default/objects/Opportunity/fields/Review_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Review_On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>COP has notified Credit that the Account is On Hold and will await word from them if the Order is approved to move on</description>
    <inlineHelpText>COP has notified Credit that the Account is On Hold and will await word from them if the Order is approved to move on</inlineHelpText>
    <label>Review On Hold</label>
    <type>Checkbox</type>
</CustomField>