force-app/main/default/objects/Opportunity/fields/Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Opportunity has been reviewed (CPQ Opportunities except for Drop Ship and 125 / Parts must be reviewed before they are created in Salespad)</description>
    <label>Reviewed</label>
    <type>Checkbox</type>
</CustomField>