force-app/main/default/objects/Opportunity/fields/Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Date__c</fullName>
    <description>Date the Reviewed Checkbox was selected</description>
    <inlineHelpText>Date the Reviewed checkbox was populated. Starting 9/22/23</inlineHelpText>
    <label>Reviewed Date</label>
    <type>DateTime</type>
</CustomField>