force-app/main/default/objects/Opportunity/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The employee reviewing the Opportunity (not necessary if Drop Ship or 125/parts Order)</description>
    <inlineHelpText>The employee reviewing the Opportunity (not necessary if Drop Ship or 125/parts Order)</inlineHelpText>
    <label>Reviewer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR (4 AND 5)</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>ATS Central Order Processing</value>
        </filterItems>
        <filterItems>
            <field>User.FirstName</field>
            <operation>equals</operation>
            <value>Sean,</value>
        </filterItems>
        <filterItems>
            <field>User.LastName</field>
            <operation>contains</operation>
            <value>Beasley, Eggeman, Heller, Telfor, Cazarez</value>
        </filterItems>
        <filterItems>
            <field>User.FirstName</field>
            <operation>equals</operation>
            <value>Kevin</value>
        </filterItems>
        <filterItems>
            <field>User.LastName</field>
            <operation>equals</operation>
            <value>Fregien</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>