force-app/main/default/objects/Opportunity/fields/Reviewer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Notes__c</fullName>
    <label>Reviewer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>