force-app/main/default/objects/Opportunity/fields/RM_User__c.field-meta.xml
<CustomField>
    <fullName>RM_User__c</fullName>
    <description>Is the Current Viewer the RM of the Opportunity Location?</description>
    <formula>Warehouse__r.RM_View__c</formula>
    <label>RM User?</label>
    <type>Checkbox</type>
</CustomField>