force-app/main/default/objects/Opportunity/fields/RTF_Description__c.field-meta.xml
<CustomField>
    <fullName>RTF_Description__c</fullName>
    <label>RTF Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>