force-app/main/default/objects/Opportunity/fields/Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_Time__c</fullName>
    <description>Used for quip multi-quote</description>
    <label>Multi-Quote Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>