force-app/main/default/objects/Opportunity/fields/RUP_Selected__c.field-meta.xml
<CustomField>
    <fullName>RUP_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be set by CPQ. Will use to trigger flows/check against when making to order</description>
    <label>RUP Selected?</label>
    <type>Checkbox</type>
</CustomField>