force-app/main/default/objects/Opportunity/fields/S_Account__c.field-meta.xml
<CustomField>
    <fullName>S_Account__c</fullName>
    <description>If account for the opportunity is an S account will show banner warning they cannot close win non S account sales</description>
    <formula>IF(Contains(Account.Customer__c, &apos;-S&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S Account?</label>
    <type>Checkbox</type>
</CustomField>