force-app/main/default/objects/Opportunity/fields/SageBWQuoteId__c.field-meta.xml
<CustomField>
    <fullName>SageBWQuoteId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SageBW Quote Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>