force-app/main/default/objects/Opportunity/fields/Sales_Goal__c.field-meta.xml
<CustomField>
    <fullName>Sales_Goal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Goal associated with this Opportunity</description>
    <label>Sales Goal</label>
    <referenceTo>Sales_Goal__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>