force-app/main/default/objects/Opportunity/fields/Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Email__c</fullName>
    <description>Used to be able to have the Sales Rep Email to be able to send Emails via Conga Composer/Trigger</description>
    <formula>Sales_Rep__r.Email__c</formula>
    <label>Sales Rep Email</label>
    <type>Text</type>
</CustomField>