force-app/main/default/objects/Opportunity/fields/Sales_Rep_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Phone__c</fullName>
    <description>Used in Conga to put the Sales Rep Phone Number on the Quote</description>
    <formula>Sales_Rep__r.Mobile__c</formula>
    <label>Sales Rep Phone #</label>
    <type>Text</type>
</CustomField>