force-app/main/default/objects/Opportunity/fields/Sales_Rep_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_User__c</fullName>
    <description>Used to allow Sales Reps to see all Opportunities in which they are listed as the Sales Rep</description>
    <formula>OR(Sales_Rep__r.Salesforce_User__c = $User.Id, Owner.Id = $User.Id,  Account.Associate_Rep__r.Salesforce_User__c = $User.Id)</formula>
    <label>Sales Rep User</label>
    <type>Checkbox</type>
</CustomField>