force-app/main/default/objects/Opportunity/fields/SGM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SGM_Quantity__c</fullName>
    <description>SGM Machines Only - # Purchased on this Opportunity</description>
    <inlineHelpText>SGM Machines Only - # Purchased on this Opportunity</inlineHelpText>
    <label>SGM Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>