force-app/main/default/objects/Opportunity/fields/SGM_Type__c.field-meta.xml
<CustomField>
    <fullName>SGM_Type__c</fullName>
    <description>Steel Green Machine - Product #</description>
    <inlineHelpText>Steel Green Machine - Product #</inlineHelpText>
    <label>SGM Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SG36</fullName>
            </value>
            <value>
                <fullName>SG36-S</fullName>
            </value>
            <value>
                <fullName>SG42</fullName>
            </value>
            <value>
                <fullName>SG42-S</fullName>
            </value>
            <value>
                <fullName>SG46</fullName>
            </value>
            <value>
                <fullName>SG46-S</fullName>
            </value>
            <value>
                <fullName>SG52</fullName>
            </value>
            <value>
                <fullName>SG52-HV</fullName>
            </value>
            <value>
                <fullName>SG52-S</fullName>
            </value>
            <value>
                <fullName>SG52-ST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>