force-app/main/default/objects/Opportunity/fields/Ship_Type__c.field-meta.xml
<CustomField>
    <fullName>Ship_Type__c</fullName>
    <label>Ship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shipping_Types</valueSetName>
    </valueSet>
</CustomField>