force-app/main/default/objects/Opportunity/fields/Shipping_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Formula__c</fullName>
    <description>Used in Conga to put the Shipping Address on the Quote, since Conga only pulls in the Contact Point Address Name, and not the actual Address</description>
    <formula>Shipping_Address__r.Street  &amp; br() &amp; Shipping_Address__r.City &amp; IF(ISBLANK(Shipping_Address__c), NULL, &quot;, &quot;) &amp; Shipping_Address__r.State &amp; &quot; &quot; &amp; Shipping_Address__r.PostalCode</formula>
    <label>Selected Shipping Address</label>
    <type>Text</type>
</CustomField>