force-app/main/default/objects/Opportunity/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <formula>Shipping_Address__r.State</formula>
    <label>Shipping State</label>
    <type>Text</type>
</CustomField>