force-app/main/default/objects/Opportunity/fields/Shipping_Total__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Total__c</fullName>
    <description>Shipping Total, updated using a Rollup Flow to get the Shipping Opportunity Products on the Opportunity.</description>
    <label>Shipping Total</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>