force-app/main/default/objects/Opportunity/fields/Soil_Test__c.field-meta.xml
<CustomField>
    <fullName>Soil_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was a soil test done on the field?</inlineHelpText>
    <label>Soil Test?</label>
    <type>Checkbox</type>
</CustomField>