force-app/main/default/objects/Opportunity/fields/Special_Order__c.field-meta.xml
<CustomField>
    <fullName>Special_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this quote was flagged as a special order when submitted</description>
    <label>Special Order?</label>
    <type>Checkbox</type>
</CustomField>