force-app/main/default/objects/Opportunity/fields/Sports_Opp__c.field-meta.xml
<CustomField>
    <fullName>Sports_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this is a sports turf opportunity</inlineHelpText>
    <label>Sports Opportunity?</label>
    <type>Checkbox</type>
</CustomField>