force-app/main/default/objects/Opportunity/fields/Submitted_For_Pricing_and_Freight__c.field-meta.xml
<CustomField>
    <fullName>Submitted_For_Pricing_and_Freight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted For Pricing and Freight</label>
    <type>Checkbox</type>
</CustomField>