force-app/main/default/objects/Opportunity/fields/Submitted_to_Purchasing__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_Purchasing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted to Purchasing</label>
    <type>Checkbox</type>
</CustomField>