force-app/main/default/objects/Opportunity/fields/Submitted_to_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_Warehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks to see if Order Review button was selected</description>
    <inlineHelpText>Checks to see if Order Review button was selected</inlineHelpText>
    <label>Submitted to Warehouse</label>
    <type>Checkbox</type>
</CustomField>