force-app/main/default/objects/Opportunity/fields/Supplier_Quote_Completed__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Quote_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Dropship Fertilizer quotes</description>
    <label>Supplier Quote Completed</label>
    <type>Checkbox</type>
</CustomField>