force-app/main/default/objects/Opportunity/fields/Target_Area__c.field-meta.xml
<CustomField>
    <fullName>Target_Area__c</fullName>
    <inlineHelpText>The target area (sq ft) for the entire Opportunity (can specify smaller target areas per Product if needed)</inlineHelpText>
    <label>Target Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>