force-app/main/default/objects/Opportunity/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>Delivery Date(s) Requested - To</label>
    <type>Date</type>
</CustomField>