force-app/main/default/objects/Opportunity/fields/Unit_Total__c.field-meta.xml
<CustomField>
    <fullName>Unit_Total__c</fullName>
    <label>Unit Total</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>