force-app/main/default/objects/Opportunity/fields/Valley_Green_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Valley_Green_Opportunity__c</fullName>
    <formula>IF( ISPICKVAL(Warehouse__r.LocationType, &quot;VG&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valley Green Opportunity</label>
    <type>Checkbox</type>
</CustomField>