force-app/main/default/objects/Opportunity/fields/Valley_Green_User__c.field-meta.xml
<CustomField>
    <fullName>Valley_Green_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valley Green User?</label>
    <type>Checkbox</type>
</CustomField>