force-app/main/default/objects/Opportunity/fields/W_O_Location_Shop__c.field-meta.xml
<CustomField>
    <fullName>W_O_Location_Shop__c</fullName>
    <description>filled by a process builder if there is a work order assigned and a location is set on the work order</description>
    <label>W.O. Location Shop</label>
    <length>128</length>
    <type>Text</type>
</CustomField>