force-app/main/default/objects/Opportunity/fields/W_O_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>W_O_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is updated via the Work Order Scheduled or In Progress Process Builder. It can be used to filter and was created to remove opportunities from the rep calendars. This way if the W.O. is scheduled then this field is marked true and the opportunity is removed from the calendar and the actual work order replaces it</description>
    <label>W.O. Scheduled</label>
    <type>Checkbox</type>
</CustomField>