force-app/main/default/objects/Opportunity/fields/Warehouse_Numb__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Numb__c</fullName>
    <formula>Warehouse__r.Location_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Numb</label>
    <type>Text</type>
</CustomField>