force-app/main/default/objects/Opportunity/fields/Warehouse_Order_Notification_Group__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Order_Notification_Group__c</fullName>
    <description>Used to email the Order Confirmation to the Warehouse via Conga Trigger</description>
    <formula>Warehouse__r.Order_Notification_Group__c</formula>
    <label>Warehouse Order Notification Group</label>
    <type>Text</type>
</CustomField>