force-app/main/default/objects/Opportunity/fields/Work_Order_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by flow</description>
    <label>Work Order Assigned?</label>
    <type>Checkbox</type>
</CustomField>