force-app/main/default/objects/Opportunity/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Work Type for this Opportunity (Sports Field Opportunities only)</description>
    <inlineHelpText>Work Type for this Opportunity</inlineHelpText>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>