force-app/main/default/objects/Opportunity/recordTypes/CPQ.recordType-meta.xml
<RecordType>
    <fullName>CPQ</fullName>
    <active>true</active>
    <businessProcess>Customer Opportunity</businessProcess>
    <description>CPQ Replacement</description>
    <label>CPQ</label>
</RecordType>