force-app/main/default/objects/Opportunity/recordTypes/Customer_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Customer_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Customer Opportunity</businessProcess>
    <label>Customer Opportunity</label>
</RecordType>