force-app/main/default/objects/Opportunity/recordTypes/Field_Evaluation.recordType-meta.xml
<RecordType>
    <fullName>Field_Evaluation</fullName>
    <active>true</active>
    <businessProcess>Field Evaluations</businessProcess>
    <description>An athletic Field Evaluation that could be a Sales Opportunity</description>
    <label>Field Evaluation</label>
</RecordType>