force-app/main/default/objects/Opportunity/recordTypes/Line_Mark.recordType-meta.xml
<RecordType>
    <fullName>Line_Mark</fullName>
    <active>false</active>
    <businessProcess>Customer Opportunity</businessProcess>
    <label>Line Mark</label>
</RecordType>