force-app/main/default/objects/Opportunity/recordTypes/LT_Rich.recordType-meta.xml
<RecordType>
    <fullName>LT_Rich</fullName>
    <active>false</active>
    <businessProcess>Customer Opportunity</businessProcess>
    <label>LT Rich</label>
</RecordType>