force-app/main/default/objects/Opportunity/recordTypes/Prospective_Opp_New.recordType-meta.xml
<RecordType>
    <fullName>Prospective_Opp_New</fullName>
    <active>true</active>
    <businessProcess>Customer Opportunity</businessProcess>
    <description>A New Sales Opportunity - Prospective Only (not ready for quoting)</description>
    <label>Prospective Opp - New</label>
</RecordType>