force-app/main/default/objects/Opportunity/recordTypes/SGM_Parts.recordType-meta.xml
<RecordType>
    <fullName>SGM_Parts</fullName>
    <active>true</active>
    <businessProcess>SGM Machine</businessProcess>
    <label>SGM Parts</label>
</RecordType>