force-app/main/default/objects/Opportunity/recordTypes/Valley_Green.recordType-meta.xml
<RecordType>
    <fullName>Valley_Green</fullName>
    <active>true</active>
    <businessProcess>Customer Opportunity</businessProcess>
    <label>Valley Green</label>
</RecordType>