force-app/main/default/objects/Opportunity/validationRules/Closed_Lost_Reason_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Reason_Needed</fullName>
    <active>true</active>
    <description>Sales Leadership would like to require a Loss Reason on Closed Lost --TLP 6/27/23</description>
    <errorConditionFormula>AND( ISCHANGED(StageName), ISPICKVAL( StageName , &apos;Closed Lost&apos;),
ISBLANK(TEXT( Loss_Reason__c )),
(RecordType.Name = &apos;CPQ&apos;)
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>If you lose an Opportunity, the Loss Reason is required.</errorMessage>
</ValidationRule>