force-app/main/default/objects/Opportunity/validationRules/Closed_Won_Delivery_Date_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Delivery_Date_Needed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL(StageName, &apos;Closed Won&apos;), 
   ISBLANK( Delivery_Date_s_Requested__c ),
   RecordType.Name = &apos;CPQ&apos;,
   Is_Automation_Bypassed__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Delivery_Date_s_Requested__c</errorDisplayField>
    <errorMessage>You must have a First Requested Delivery Date before you can mark this Opportunity as Closed Won</errorMessage>
</ValidationRule>