force-app/main/default/objects/Opportunity/validationRules/Closed_Won_must_have_S_account.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_must_have_S_account</fullName>
    <active>false</active>
    <description>Force Sports Turf Opps to have a &apos;S&apos; account in order to close win. Remember to only require on sports turf recordId

&apos;Account.RecordTypeId === &apos;0122M000001UYjkQAG&apos;, = no lead accounts</description>
    <errorConditionFormula>And(
 ISCHANGED(StageName),
 ISPICKVAL(StageName, &apos;Closed Won&apos;),
 NOT(CONTAINS(  Account.Customer__c  , &apos;-S&apos;)), 
 OR(
   RecordType.Name  == &apos;Sports Turf&apos;,
 RecordType.Name == &apos;Sports Opp - Construction&apos;,
 RecordType.Name == &apos;Sports Opp - Maintenance&apos;,
 RecordType.Name == &apos;Sports Opp - New&apos; 
)
  

)</errorConditionFormula>
    <errorMessage>Only &apos;S&apos; accounts can be closed won</errorMessage>
</ValidationRule>